melhora pra situação atual

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body class="d-flex flex-column">
     
-    <h1 style="color:#FFFF">Tá livre hoje pra sair comigo?</h1>
+    <h1 style="color:#FFFF">Tá livre pra sair comigo sexta ?</h1>
 
     <div class="container">
         <div class="label-container" id="sim-container">
